test/files/neg/t0152.check
t0152.scala:10: error: illegal inheritance;
 object boom inherits different type instances of class Value:
Value[java.lang.String] and Value[Int]
 object boom extends Value[java.lang.String]("foo") with PlusOne
        ^
one error found
